# telemetry

./: .gitignore  README.md  SKILL.md  pyproject.toml
docs/: modal-otel-setup.md
examples/: example_modal.py  smoketest_gpu.py  smoketest_track.py
infra/: .env.example  Caddyfile  cloud-init.yaml  docker-compose.override.yml
st_telemetry/: __init__.py  billing.py  exporter.py  gpu.py  pricing.py  tagging.py  tracker.py
