[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "st-telemetry"
version = "0.1.0"
description = "Drop-in OpenTelemetry instrumentation for Modal AI/RL workloads."
requires-python = ">=3.10"
dependencies = [
  "modal>=0.64",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp-proto-http>=1.25",
  "nvidia-ml-py>=12.535",
]

[tool.hatch.build.targets.wheel]
packages = ["st_telemetry"]
